# TrueVision4

./: .gitignore  FEATURES.md  Makefile  pyproject.toml  pyrightconfig.json
apps/pi/truevision_pi/: __init__.py  main.py  system_imports.py
apps/pi/truevision_pi/audio/: __init__.py  forwarder.py  live_captioner.py  recorder.py  serial_receiver.py  server_connection.py  transcriber.py
apps/pi/truevision_pi/faces/: __init__.py  presence.py  recognizer.py
apps/pi/truevision_pi/launchers/: __init__.py  browser_launcher.py
apps/pi/truevision_pi/runtime/: __init__.py  camera.py  hud.py  service.py
apps/pi/truevision_pi/static/: index.html
apps/server/truevision_server/: __init__.py  app.py  audio_session.py  summarization.py  telegram.py
apps/server/truevision_server/discovery/: advertiser.py
data/: truevision-report.html
data/hud-preview/data/runtime/: latest-hud.json
data/runtime/: latest-hud.json
deploy/systemd/: truevision-server.service  truevision.service
docs/: production-checkpoints.md
firmware/esp32/: truevision_esp32.ino
scripts/: add_face.py  backfill_summaries.py  backfill_transcripts.py  hardware_checkpoints.py  manage_embeddings.py  setup_pi.py  setup_pi.sh  setup_server.py  setup_server.sh  summarize_meetings.py  visualize_db.py
shared/truevision_shared/: __init__.py  config.py  db.py  logging_utils.py  pi_state.py  protocol.py  store.py
tests/: test_foundation.py  test_pi_controller.py  test_pi_runtime.py  test_pi_sessions.py  test_pi_system_imports.py  test_server_audio.py  test_server_endpoints.py  test_shared_protocol.py
